[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/characters/character1/midori.png" type="Texture" id=1]
[ext_resource path="res://src/Main.gd" type="Script" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1008.0
margin_bottom = 576.0
color = Color( 0.2, 0.227451, 0.309804, 1 )

[node name="Dialogue" type="Label" parent="CanvasLayer"]
anchor_left = 0.003
anchor_right = 0.003
margin_left = 48.928
margin_top = 434.0
margin_right = 960.928
margin_bottom = 573.0
align = 1
valign = 1

[node name="UserInput" type="LineEdit" parent="CanvasLayer"]
margin_left = 334.0
margin_top = 234.0
margin_right = 657.0
margin_bottom = 349.0

[node name="TalkButton" type="Button" parent="CanvasLayer"]
margin_left = 580.0
margin_top = 364.0
margin_right = 653.0
margin_bottom = 384.0
text = "Talk"

[node name="SaveInput" type="LineEdit" parent="CanvasLayer"]
margin_left = 329.0
margin_top = 105.0
margin_right = 659.0
margin_bottom = 129.0
placeholder_text = "Enter OpenAI API Key"

[node name="SaveButton" type="Button" parent="CanvasLayer"]
margin_left = 585.0
margin_top = 141.0
margin_right = 658.0
margin_bottom = 161.0
text = "Save"

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 689, 265 )
z_index = 2
z_as_relative = false
texture = ExtResource( 1 )

[connection signal="pressed" from="CanvasLayer/TalkButton" to="." method="_on_TalkButton_pressed"]
[connection signal="pressed" from="CanvasLayer/SaveButton" to="." method="_on_SaveButton_pressed"]
